@@ -6,6 +6,8 @@ Version 1.0.6 to be released
 ----------------------------
 - Bug #308: typo in CLinkPager CSS class name (Qiang)
 - Bug #310: Leading space in auto generated labels if they end with "ID" (Qiang)
+- Bug #312: defaultScope not honored when other sopes are applied (Qiang)
+- Bug #313: Dynamic parameter for lazy loading resets the parameters specified in default scope (Qiang)
 - Bug #321: CProfileLogRoute should be disabled for AJAX requests (Qiang)
 - Bug: Syntax errors in autoloaded classes are not reported (Qiang)
 - New #304: Added flv mimeType to the mimeType array (Qiang)
